--- a/index.html
+++ b/index.html
@@ -132,16 +132,21 @@
 </div>
 
 
-<h2><b>Industry Practitioner</b></h2>
-<div>
-    <h5><b>Efficiency Advantage</b></h5>
-    <p>Fewer parameters due to a simple network structure means inducing low costs.</p>
-    <p>Faster training time and lower memory requirements make it possible to produce alternative models despite the company, which cannot build large models.</p>
-</div>
+<div class="container">
+  <div class="row">
+    <h2 style="margin-top: 20px;"><b>Industry Practitioner</b></h2>
+    
+    <div class="section">
+      <h5 style="margin-top: 10px;"><b>Efficiency Advantage</b></h5>
+      <p>Fewer parameters due to a simple network structure means inducing low costs. Faster training time and lower memory requirements make it possible to produce alternative models for companies that cannot build large models.</p>
+    </div>
 
-<div>
-    <h5><b>Flexibility</b></h5>
-    <p>The GRU can be applied to sequence data of various tunings with similar performance of LSTM with solving cost issues.</p>
+    <div class="section">
+      <h5 style="margin-top: 10px;"><b>Flexibility</b></h5>
+      <p>The GRU can be applied to sequence data of various types, offering similar performance to LSTM, but with cost-saving benefits.</p>
+    </div>
+
+  </div>
 </div>
 
 <p>Optionally, in addition to a reading-based analysis, implement the ideas of the paper in code, and report on your findings.
