--- a/index.html
+++ b/index.html
@@ -68,8 +68,19 @@
 
           <b>Music Datasets:</b>
           <p>The GRU-RNN outperformed LSTM-RNN and tanh-RNN on most music datasets, except for Nottingham where the performance was comparable among the three models.</p>
+
+          <div>
+          <img src="results1.png" alt="results 1" width="400" height="350">  
+          <img src="results2.png" alt="results 2" width="400" height="350">
+          </div>
+
           <b>Ubisoft Datasets:</b>
           <p>Both GRU-RNN and LSTM-RNN outperformed tanh-RNN on the Ubisoft datasets. LSTM-RNN performed better on Ubisoft A, while GRU-RNN performed better on Ubisoft B.</p>
+
+          <div>
+            <img src="results3.png" alt="results 3" width="400" height="350">  
+            <img src="results4.png" alt="results 4" width="400" height="350">
+            </div>
             
           <b>Observations:</b>
           <p><b>Advantages of Gating Units:</b> The results indicated that RNNs with gating units (GRU-RNN and LSTM-RNN) generally outperformed the more traditional tanh-RNN. Gating units led to faster convergence and better final solutions.</p>
