--- a/index.html
+++ b/index.html
@@ -141,14 +141,16 @@
             <li>Founder of the Montreal Institute of Artificial Intelligence (MILA) and significantly contributed to the A.I field</li>
             <li>In 2018, Awarded the Turing Prize</li>
         </ul>
-    </div>
+        </div>
+    <\div>
+<\div>
 
 <div class="container">
   <div class="row">    
     <h2><b>Social Impact</b></h2> 
     
     <div>
-        <h5><b>Positive Impact</b></h5>
+        <h5 style="font-size: 16pt;"><b>Positive Impact</b></h5>
         <h6><b>1. Cost-Effective Natural Language Processing:</b></h6>
           <p>The reduced model computing and learning time associated with GRUs enable companies to develop cost-effective natural language processing (NLP) models. 
             This reduction in costs makes advanced language processing technology more accessible, allowing a broader range of companies to implement and deploy language models without prohibitive expenses.</p>
@@ -160,7 +162,7 @@
     </div>
     
     <div>
-        <h5><b>Negative Impact</b></h5>
+        <h5 style="font-size: 16pt;"><b>Negative Impact</b></h5>
         <h6><b> 1. Reliability for Specialized Tasks:</b></h6>
         <p>LSTMs are known to perform well with complex data and long sequences. However, if the output of LSTMs is less accurate, it can be unreliable for users relying on models for specialized tasks. 
           For applications where precision and reliability are crucial, such as medical diagnoses or critical decision-making, inaccuracies in LSTM outputs can have significant consequences.
