--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <li>In 2018, Awarded the Turing Prize</li>
         </ul>
     </div>
-<\div>
-<\div>
+</div>
+</div>
 
 <div class="container">
   <div class="row">    
@@ -167,8 +167,8 @@
               For applications where precision and reliability are crucial, such as medical diagnoses or critical decision-making, inaccuracies in LSTM outputs can have significant consequences.
             </p>
     </div>
-<\div>
-<\div>
+</div>
+</div>div>
 
 <div class="container">
   <div class="row">
