--- a/index.html
+++ b/index.html
@@ -233,21 +233,26 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
 <h3>References</h3>
 <p><a name="bottou-1990">[1]</a> <a href="https://papers.baulab.info/Bottou-1990.pdf"
   >L&eacute;on Bottou and Patrick Gallinari.
   <em>A framework for the cooperation of learning algorithms.</em></a>
   Advances in neural information processing systems 3 (1990).
 </p>       
+    </div>
+</div>
 
-<h2>Team Members</h2>
-                                                   
-<p>Hwijong Im</p>
-<p>Aishwarya Nagendra Kumar</p>
+<div class="container">
+    <div class="row">
+    <h2>Team Members</h2>
+                                                       
+    <p>Hwijong Im</p>
+    <p>Aishwarya Nagendra Kumar</p>
+    </div>
+</div>
 
-  
-</div><!--col-->
-</div><!--row -->
 </div> <!-- container -->
 
 <footer class="nd-pagefooter">
