--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <div>
       <h2><b>Peer review:</b></h2>
-      <b> Aishwarya</b>
+      <b> Hwijong Im</b>
     
       <p>Originality: 7/10</p>
       <p>This paper provides a valuable empirical comparison between LSTM and GRU models, comparing their efficiency in terms of computational complexity and learning time. Although the superiority of LSTMs is already widely recognized, this study aims to contribute to the literature by demonstrating the efficiency and cost-effectiveness of GRU models.</p>
