--- a/index.html
+++ b/index.html
@@ -233,25 +233,27 @@
 
 <div class="container">
     <div class="row">
-<h3>References</h3>
-<p><a name="bottou-1990">[1]</a> <a href="https://papers.baulab.info/Bottou-1990.pdf"
-  >L&eacute;on Bottou and Patrick Gallinari.
-  <em>A framework for the cooperation of learning algorithms.</em></a>
-  Advances in neural information processing systems 3 (1990).
-</p>       
+        <h3>References</h3>
+        <p>[1] L&eacute;on Bottou and Patrick Gallinari. "A framework for the cooperation of learning algorithms." Advances in neural information processing systems 3 (1990).</p>
+        <p>[2] <a href="https://github.com/adeshpande3/LSTM-Sentiment-Analysis/blob/master/Pre-Trained%20LSTM.ipynb">Pre-Trained LSTM model for Sentiment Analysis</a> (Accessed 2023).</p>
+        <p>[3] <a href="https://towardsdatascience.com/understanding-gru-networks-2ef37df6c9be">Understanding GRU networks</a> (Accessed 2023).</p>
+        <p>[4] <a href="https://medium.com/@anishnama20/understanding-gated-recurrent-unit-gru-in-deep-learning-2e54923f3e2">Understanding Gated Recurrent Unit (GRU) in Deep Learning</a> (Accessed 2023).</p>
+        <!-- 추가할 GRU 관련 서적 참고문헌 -->
+        <p>[5] Cho, K., et al. "Learning phrase representations using RNN encoder-decoder for statistical machine translation." arXiv preprint arXiv:1406.1078 (2014).</p>
+        <p>[6] Chung, J., et al. "Empirical evaluation of gated recurrent neural networks on sequence modeling." arXiv preprint arXiv:1412.3555 (2014).</p>
+        <p>[7] Olah, C. "Understanding LSTM Networks." colah's blog (2015).</p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-    <h2>Team Members</h2>
-                                                       
-    <p>Hwijong Im</p>
-    <p>Aishwarya Nagendra Kumar</p>
+        <h2>Team Members</h2>
+        <p>Hwijong Im</p>
+        <p>Aishwarya Nagendra Kumar</p>
     </div>
 </div>
 
-</div> <!-- container -->
+    
 
 <footer class="nd-pagefooter">
   <div class="row">
