--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
 <style>
+        body {
+            margin: 0; /* 기본 마진 제거 */
+            font-family: 'Open Sans', sans-serif; /* 기본 폰트 설정 */
+        }
+        .header-banner {
+            background-color: navy; /* 배너의 배경 색상을 네이비로 설정 */
+            color: white; /* 텍스트 색상을 흰색으로 설정 */
+            padding: 40px 0; /* 상하 여백 추가 */
+            text-align: center; /* 텍스트 중앙 정렬 */
+        }
+        .header-banner h1 {
+            margin: 0;
+            padding: 0;
+            font-size: 50px; /* 제목의 폰트 크기 */
+        }
+        .header-banner p {
+            margin: 10px 0; /* 상하 여백 */
+        }
+        .analysis-authors {
+            color: #00FFFF; /* 사이언 색상 코드 */
+            font-size: 20px; /* 저자 이름의 폰트 크기 */
+        }
     h2, h5 {
         font-size: 25pt;
         padding-bottom: 15px;
@@ -248,7 +270,11 @@
 <div class="container">
     <div class="row">
         <h2>Team Members</h2>
+    </div>
+    <div class="row">
         <p>Hwijong Im</p>
+    </div>
+    <div class="row">
         <p>Aishwarya Nagendra Kumar</p>
     </div>
 </div>
