minor format change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="container">
     <div class="row">
         <h5 style="margin-top: 10px;"><b>An Analysis of Gated Recurrent Neural Networks in Sequence Modeling</b></h5>
-        <p>The paper compares different recurrent units in RNNs—LSTMs and GRUs—with the hypothesis that specialized units outperform vanilla RNNs.</p> 
+        <p>The paper compares different recurrent units in RNNs - LSTMs and GRUs - with the hypothesis that specialized units outperform vanilla RNNs.</p> 
 
         <img src="RNN_LSTM_GRU.png" alt="RNN GRU LSTM">
 
