--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html lang="en">
+        
 <head>
-<title>Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling</title>
-<meta property="og:title" content="Your Project Name" />
-<meta name="twitter:title" content="Your Project Name" />
-<meta name="description" content="Your project about your cool topic described right here." />
-<meta property="og:description" content="Your project about your cool topic described right here." />
-<meta name="twitter:description" content="Your project about your cool topic described right here." />
-<meta property="og:type" content="website" />
-<meta name="twitter:card" content="summary" /> 
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<!-- bootstrap for mobile-friendly layout -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
-<style>
+    <title>Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling</title>
+    <meta property="og:title" content="Your Project Name" />
+    <meta name="twitter:title" content="Your Project Name" />
+    <meta name="description" content="Your project about your cool topic described right here." />
+    <meta property="og:description" content="Your project about your cool topic described right here." />
+    <meta name="twitter:description" content="Your project about your cool topic described right here." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" /> 
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <!-- bootstrap for mobile-friendly layout -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <style>
         body {
             margin: 0; /* 기본 마진 제거 */
             font-family: 'Open Sans', sans-serif; /* 기본 폰트 설정 */
@@ -39,14 +40,15 @@
             color: #00FFFF; /* 사이언 색상 코드 */
             font-size: 20px; /* 저자 이름의 폰트 크기 */
         }
-    h2, h5 {
-        font-size: 25pt;
-        padding-bottom: 15px;
-    }
-    .section {
-        padding-bottom: 20px;
-    }
-</style>
+        h2, h5 {
+            font-size: 25pt;
+            padding-bottom: 15px;
+        }
+        .section {
+            padding-bottom: 20px;
+        }
+        /* 추가적인 스타일이 필요할 경우 여기에 작성하세요 */
+    </style>
 </head>
 
 <div class="container">
