--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
           <p><b>Comparison of LSTM and GRU:</b> The study did not provide conclusive evidence regarding the superiority of either LSTM or GRU, suggesting that the choice of the gated recurrent unit may heavily depend on the specific dataset and task.</p>
             
           <p><b>Learning Curves:</b> Visualizing the learning curves revealed that GRU-RNN made faster progress in terms of the number of updates and actual CPU time, particularly evident in the music datasets. Tanh-RNN, while computationally more efficient per update, struggled to make significant progress in the Ubisoft datasets.</p>
+
+          <div>
+          <img src="results1.png" alt="results 1" width="400" height="350">  
+          <img src="results2.png" alt="results 2" width="400" height="350">
+          </div>
+                
         </div>
     </div>
 </div>
